--- a/0c95f717.html
+++ b/0c95f717.html
@@ -45,23 +45,14 @@
 				<div class="col-md-12 big-letter">
 					<p>
 						Добре дошла в страницата на рождения си ден. Тук ще намериш пътя който трябва да извървиш, за да откриеш своите подаръци.
-					</p><!--
-					<br>
-					<p>
-						Vestibulum tempor velit nibh, nec finibus lectus ultrices sodales. Aliquam pellentesque nisl et maximus egestas. Vivamus accumsan, sem ut viverra
-						ullamcorper, neque ligula laoreet justo, non semper nunc mauris mattis lorem. Maecenas finibus non ipsum ullamcorper vehicula.
-					</p> -->
-				</div>
-				<!-- <div class="col-md-6">
-					<p>
-						Aliquam pellentesque nisl et maximus egestas. Vivamus accumsan, sem ut viverra ullamcorper, neque ligula laoreet justo,
-						non semper nunc mauris mattis lorem. Quisque maximus vel nibh non tincidunt. Mauris felis felis, porta
-						vitae sem sed, auctor consequat diam. Sed eu magna ultricies, convallis elit vel, lacinia ante. Vestibulum tempor velit
-						nibh, nec finibus lectus ultrices sodales
 					</p>
 					<br>
-					<img class="pull-right" src="img/signature.jpg" alt="signature">
-				</div> -->
+					<p>
+						На първо място трябва да се разходиш и да откриеш един човек, който знае какво е HTML и CSS и обича да фотографира. Там е възможно да откриеш своя подарък.
+
+						Успех!
+					</p>
+				</div>
 			</div>
 		</div>
 	</section>
