--- a/1b818da5.html
+++ b/1b818da5.html
@@ -45,12 +45,11 @@
 				<div class="col-md-12 big-letter">
 					<p>
 						Добре дошла в страницата на рождения си ден. Тук ще намериш пътя който трябва да извървиш, за да откриеш своите подаръци.
-					</p><!--
+					</p>
 					<br>
 					<p>
-						Vestibulum tempor velit nibh, nec finibus lectus ultrices sodales. Aliquam pellentesque nisl et maximus egestas. Vivamus accumsan, sem ut viverra
-						ullamcorper, neque ligula laoreet justo, non semper nunc mauris mattis lorem. Maecenas finibus non ipsum ullamcorper vehicula.
-					</p> -->
+						За съжаление, твоя подарък не е тук. Оказва се, че е бил похитен от някого. Около теб намираш опаковка от дъвка орбит на лентички. И се сещаш, че човека, който търсиш има телосложение на "Дъвка Орбит". Може би твоя подарък се крие при него?
+					</p>
 				</div>
 				<!-- <div class="col-md-6">
 					<p>
