--- a/489c4e3b.html
+++ b/489c4e3b.html
@@ -45,12 +45,11 @@
 				<div class="col-md-12 big-letter">
 					<p>
 						Добре дошла в страницата на рождения си ден. Тук ще намериш пътя който трябва да извървиш, за да откриеш своите подаръци.
-					</p><!--
+					</p>
 					<br>
 					<p>
-						Vestibulum tempor velit nibh, nec finibus lectus ultrices sodales. Aliquam pellentesque nisl et maximus egestas. Vivamus accumsan, sem ut viverra
-						ullamcorper, neque ligula laoreet justo, non semper nunc mauris mattis lorem. Maecenas finibus non ipsum ullamcorper vehicula.
-					</p> -->
+						Ти откри човека Габрово. Той ти казва обаче че подаръка не е при него. Подаръка е бил взет от някого, но не е успял да види от кого, защото слъцето се е отразявало прекалено много в темето му. Намери този човек и може би там ще се крие твоя подарък?
+					</p>
 				</div>
 				<!-- <div class="col-md-6">
 					<p>
