--- a/4a73b3f7.html
+++ b/4a73b3f7.html
@@ -45,12 +45,11 @@
 				<div class="col-md-12 big-letter">
 					<p>
 						Добре дошла в страницата на рождения си ден. Тук ще намериш пътя който трябва да извървиш, за да откриеш своите подаръци.
-					</p><!--
+					</p>
 					<br>
 					<p>
-						Vestibulum tempor velit nibh, nec finibus lectus ultrices sodales. Aliquam pellentesque nisl et maximus egestas. Vivamus accumsan, sem ut viverra
-						ullamcorper, neque ligula laoreet justo, non semper nunc mauris mattis lorem. Maecenas finibus non ipsum ullamcorper vehicula.
-					</p> -->
+						Damn it. Подаръка ти не е и тук. Бил е отнет от някого. Понко ти казва, че този някого сега се намира на 8-мия етаж и е подготвил предизвикателство за теб, през което ако успееш да преминеш ще получиш подаръка си.
+					</p>
 				</div>
 				<!-- <div class="col-md-6">
 					<p>
